--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext.kotlin_version = '1.2.10'
+    ext.anko_version='0.10.3'
+    ext.okhttp_version='3.9.1'
+    ext.retrofit_version='2.3.0'
+    ext.glide_version='4.4.0'
     repositories {
         google()
         jcenter()
@@ -19,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
