fix($main): fix glide image display issue
fix($main): fix immersive mode issue

refactor($main): replace PhotoView with GestureView due to state persisting issues

feat($main): finish feature set as wallpaper

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.liam.bing_wallpaper"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -32,10 +31,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.20'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation "com.android.support:appcompat-v7:$support_library_version"
+//    implementation "com.android.support:transition:$support_library_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "org.jetbrains.anko:anko:$anko_version"
-    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+//    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.alexvasilkov:gesture-views:2.4.0'
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
