--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.okhttp_version='3.9.1'
     ext.retrofit_version='2.3.0'
     ext.glide_version='4.4.0'
+    ext.support_library_version='27.0.2'
     repositories {
         google()
         jcenter()
