--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.2.61'
     ext.anko_version='0.10.3'
     ext.okhttp_version='3.9.1'
     ext.retrofit_version='2.3.0'
-    ext.glide_version='4.4.0'
-    ext.support_library_version='27.0.2'
+    ext.glide_version='4.8.0'
+    ext.androidx_version='1.0.0-rc02'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
